feat(content): add post cover art
